# rocket-sim

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: custom_controller.rs  orbital_transfer.rs  pathfinder.rs
src/: atmosphere.rs  dynamics.rs  integrator.rs  lib.rs  main.rs  types.rs
src/dynamics/: mod.rs  sixdof.rs  state.rs
src/gnc_mod/: controller.rs  guidance.rs  mod.rs  pid.rs  tvc.rs
src/io/: csv.rs  json.rs
src/orbital/: elements.rs  maneuvers.rs  mod.rs  propagator.rs
src/physics/: aerodynamics.rs  atmosphere.rs  gravity.rs  mod.rs
src/sim/: event.rs  integrator.rs  mod.rs  runner.rs
src/vehicle/: mission.rs  mod.rs  stage.rs
